--- a/src/css.html
+++ b/src/css.html
@@ -7,20 +7,22 @@
   font-family: "m plus 1p", sans-serif;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background-size: auto auto;
-  background-color: rgba(238, 238, 238, 1);
-  background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255, 255, 255, 1) 10px, rgba(255, 255, 255, 1) 20px );
-}
-
 a,
 a:visited {
   color: #404040;
 }
 
-.btn {
+body {
+  background-size: auto auto;
+  background-color: rgba(238, 238, 238, 1);
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255, 255, 255, 1) 10px, rgba(255, 255, 255, 1) 20px );
+}
+
+#main-container {
+  padding: 0;
+}
+
+.mybtn {
   background-color: rgba(0, 0, 0, 0);
   border: none;
   color: gray;
@@ -31,16 +33,16 @@ a:visited {
   vertical-align: middle;
 }
 
-.btn-hidden {
+.mybtn-hidden {
   margin-left: 10px;
 }
 
 /* darker background on mouse-over */
-.btn:hover {
+.mybtn:hover {
   color: black;
 }
 
-.btn-separator {
+.mybtn-separator {
   color: gray;
 }
 
@@ -64,37 +66,31 @@ a:visited {
 
 #header {
   height: 80px;
-  width: 100%;
   color: white;
   background-color: rgb(225, 48, 34);
   font-size: 28px;
-  padding: 20px 0 0 10px;
-  font-weight: bold;
-  position: fixed;
-  /* position: sticky 試したが, vistl の構造上どうしてもうまく行かなかったので全部 fixed にした */
+  font-weight: 600;
   z-index: 1000;
+  font-family: 'M PLUS 1p', sans-serif;
 }
 
-#button-area {
+#button-bar {
   height: 30px;
   line-height: 30px;
-  width: 100%;
-  top: 80px;
-  position: fixed;
   background: white;
   border-bottom: lightgray 1px solid;
-  z-index: 100;
-  padding-left: 10px;
+  padding: 0 0 0 10px;
+  vertical-align: middle;
+  top: 80px;
 }
 
-#container {
+#vistl-container {
   width: 100%;
   height: 100%;
   border: none;
-  font-family: "m plus 1p", sans-serif;
   overflow: scroll;
   position: fixed;
-  top: 110px; /* header と button-area 分だけ top を設定*/
+  top: 110px; /* header と button-bar 分だけ top を設定*/
   padding: 0 0 0 0;
   border-bottom: 1px solid gray;
   background-color: white;
@@ -108,7 +104,7 @@ a:visited {
 /* timeaxis(top) の固定 と位置調整 */
 .vis-panel.vis-top {
   /* top: 110px; */ /* top の値は js で修正されるっぽいので margin ↓ で修正 */
-  margin: 110px 0 0 0; /* header と button-area 分だけ margin-top を設定*/
+  margin: 110px 0 0 0; /* header と button-bar 分だけ margin-top を設定*/
   padding: 0;
   position: fixed;
   background-color: rgba(255, 255, 255, 1);
