--- a/src/js_assets.html
+++ b/src/js_assets.html
@@ -16,10 +16,30 @@
   crossorigin="anonymous"
 ></script>
 
+<!-- select2 -->
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"
+  crossorigin="anonymous"
+></script>
+
+
+<!-- bootstrap -->
+<script
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+  crossorigin="anonymous"
+></script>
+
+<!-- handlebars -->
 <script
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"
-  ></script>
+></script>
 
 <!-- vis-timeline -->
 <script
