--- a/src/js_assets.html
+++ b/src/js_assets.html
@@ -3,7 +3,6 @@
   type="text/javascript"
   src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"
 ></script>
-
 <script
   type="text/javascript"
   src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.28/moment-timezone-with-data.min.js"
@@ -19,9 +18,9 @@
 <!-- select2 -->
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"
+  integrity="sha256-wfVTTtJ2oeqlexBsfa3MmUoB77wDNRPqT1Q1WA2MMn4="
   crossorigin="anonymous"
 ></script>
-
 
 <!-- bootstrap -->
 <script
