--- a/src/project_timeline.html
+++ b/src/project_timeline.html
@@ -26,15 +26,11 @@
         <button id="mybtn-add-schedule" class="mybtn">
           Add Schedule
         </button>
-        <span class="mybtn-separator"> | </span>
-        <button id="mybtn-edit-schedule" class="mybtn">
-          Edit Schedule
-        </button>
       </nav>
       <div id="vistl-container"></div>
     </div>
 
-    <!-- Modal -->
+    <!-- Add Schedule Modal -->
     <div
       class="modal fade"
       id="modal-add-schedule"
@@ -68,6 +64,20 @@
               </div>
 
               <div class="form-group">
+                <label for="form-add-schedule-project">Type</label>
+                <br />
+                <select
+                  id="form-add-schedule-type"
+                  class="form-control"
+                  name="type"
+                >
+                <option value="range"> Range (Default)</option>
+                <option value="point"> Point </option>
+                </select>
+              </div>
+
+
+              <div class="form-group">
                 <label for="form-add-schedule-title">Title</label>
                 <input
                   type="text"
@@ -97,6 +107,7 @@
         </div>
       </div>
     </div>
+
     <script type="application/json" id="data-sheet-list">
       <?!= sheetList ?>
     </script>
