--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,12 @@
               <a target="_blank" href="<?!= sheetListSheetURL ?>" style="color: dodgerblue"> <?= sheetListSheetName ?></a>
             </div>
             <div class="form-group">
-              <label for="form-pageurl">Page URL</label>
-              <input id="form-pageurl" class="form-control" type="text" value="https://script.google.com/xxx" readonly>
+              <label for="form-pageurl">Page URL
+                <a id="form-open-url" class="btn btn-primary btn-sm" href="" target="_blank" style="color: white"> Open </a>
+              </label>
+              <textarea id="form-pageurl" class="form-control" readonly>
+              </textarea>
+              <br>
             </div>
             <div class="form-group">
               <label for="form-title">Page Title</label>
@@ -45,6 +49,8 @@
                   <th scope="col">Link</th>
                 </tr>
               </thead>
+              <label>Sheets</label>
+              <br>
               <tbody>
               </tbody>
             </table>
@@ -61,15 +67,19 @@
     <?!= includeHtml('js_assets') ?>
     <script>
       $(()=>{
-        let scriptWebAppUrl = JSON.parse($('#script-webapp-url').text())['url'];
+        let scriptWebAppUrl = encodeURI(JSON.parse($('#script-webapp-url').text())['url']);
         $('#form-pageurl').val(scriptWebAppUrl);
+        $('#form-open-url').attr('href', scriptWebAppUrl);
         let $form = $('#form-sheet-list');
         let $tbody = $form.find('tbody');
         let $formTitle = $('#form-title');
         let checkboxTemplate = Handlebars.compile(`
             <tr>
               <th scope="row">
-                <input class="form-check-input" type="checkbox" value="{{id}}" id="form-sheet-list-{{index}}">
+                <div class="custom-control custom-checkbox">
+                <input class="form-check-input custom-control-input" type="checkbox" value="{{id}}" id="form-sheet-list-{{index}}">
+                <label class="custom-control-label" for="form-sheet-list-{{index}}"></label>
+                </div>
               </th>
               <td>{{name}}</td>
               <td>{{id}}</td>
@@ -92,7 +102,9 @@
           if(!!$formTitle.val()) {
             url = url + '&title=' + $formTitle.val();
           }
+          url = encodeURI(url);
           $('#form-pageurl').val(url);
+          $('#form-open-url').attr('href', url);
         });
       });
     </script>
