--- a/src/css.html
+++ b/src/css.html
@@ -195,4 +195,9 @@ body {
 .vis-time-axis .vis-text.vis-minor.vis-sunday {
   background-color: #ffabb3;
 }
+
+.vis-tooltip {
+  background-color: #fefff5 !important;
+  border: 1px solid gray !important;
+}
 </style>
