--- a/src/js_assets.html
+++ b/src/js_assets.html
@@ -40,6 +40,12 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"
 ></script>
 
+<!-- pako -->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/pako/1.0.10/pako.min.js"
+></script>
+
 <!-- vis-timeline -->
 <script
   type="text/javascript"
