--- a/src/project_timeline.html
+++ b/src/project_timeline.html
@@ -21,12 +21,17 @@
         <span class="mybtn-separator"> | </span>
         <button id="mybtn-group-by-label" class="mybtn">
           Group By Label
-        </button> <span class="mybtn-separator"> | </span>
+        </button>
+        <span class="mybtn-separator"> | </span>
         <button id="mybtn-add-schedule" class="mybtn">
           Add Schedule
         </button>
-        </button> <span class="mybtn-separator"> | </span>
-        <button id="mybtn-get-settings-as-url" class="mybtn" role="button" data-toggle="popover" title="Copy This URL">
+        <span class="mybtn-separator"> | </span>
+        <button id="mybtn-edit-schedule" class="mybtn">
+          Edit Schedule
+        </button>
+        <span class="mybtn-separator"> | </span>
+        <button id="mybtn-get-settings-as-url" class="mybtn">
           Get Settings As URL
         </button>
       </nav>
@@ -41,8 +46,7 @@
       tabindex="-1"
       role="dialog"
       aria-hidden="true"
-    >
-      <div class="modal-dialog modal-lg" role="document">
+    > <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title">Add Schedule</h5>
@@ -79,12 +83,21 @@
                 </select>
               </div>
 
-
               <div class="form-group">
                 <label for="form-add-schedule-title">Title</label>
                 <input
                   type="text"
                   id="form-add-schedule-title"
+                  class="form-control"
+                  name="title"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-add-schedule-assignee">Assignee</label>
+                <input
+                  type="text"
+                  id="form-add-schedule-assignee"
                   class="form-control"
                   name="title"
                 />
@@ -110,6 +123,152 @@
         </div>
       </div>
     </div>
+
+    <!-- Edit Schedule Modal -->
+    <div
+      class="modal fade"
+      id="modal-edit-schedule"
+      data-backdrop="static"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Edit Schedule</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="form-edit-schedule">
+              <div class="form-group">
+                <label for="form-edit-schedule-id">ID</label>
+                <input
+                  type="text"
+                  id="form-edit-schedule-id"
+                  class="form-control"
+                  name="id"
+                  readonly
+                />
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-schedule-project">Project</label>
+                <br />
+                <select
+                  id="form-edit-schedule-project"
+                  class="form-control"
+                  name="project"
+                >
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-schedule-project">Type</label>
+                <br />
+                <select
+                  id="form-edit-schedule-type"
+                  class="form-control"
+                  name="type"
+                >
+                <option value="range"> Range (Default)</option>
+                <option value="point"> Point </option>
+                </select>
+              </div>
+
+
+              <div class="form-group">
+                <label for="form-edit-schedule-title">Title</label>
+                <input
+                  type="text"
+                  id="form-edit-schedule-title"
+                  class="form-control"
+                  name="title"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-schedule-assignee">Assignee</label>
+                <input
+                  type="text"
+                  id="form-edit-schedule-assignee"
+                  class="form-control"
+                  name="title"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              id="form-edit-schedule-button-update"
+              type="button"
+              class="btn btn-primary"
+            >
+              Update
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Settings URL Modal -->
+    <div
+      class="modal fade"
+      id="modal-get-settings-as-url"
+      data-backdrop="static"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Copy This URL</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <textarea id="modal-get-settings-as-url-url" class="form-control" rows="10" readonly>
+                </textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <script type="application/json" id="data-sheet-list">
       <?!= sheetList ?>
