--- a/src/project_timeline.html
+++ b/src/project_timeline.html
@@ -11,6 +11,10 @@
         <?= title ?>
       </nav>
       <nav id="button-bar" class="navbar fixed-top justify-content-start">
+        <button id="mybtn-toggle-foldings" class="mybtn">
+          Toggle Foldings
+        </button>
+        <span class="mybtn-separator"> | </span>
         <button id="mybtn-restore-hidden" class="mybtn">
           Restore Hidden Projects
         </button>
@@ -98,6 +102,16 @@
                 <input
                   type="text"
                   id="form-add-schedule-assignee"
+                  class="form-control"
+                  name="title"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-add-schedule-Link">Link</label>
+                <input
+                  type="text"
+                  id="form-add-schedule-link"
                   class="form-control"
                   name="title"
                 />
@@ -202,6 +216,16 @@
                   id="form-edit-schedule-assignee"
                   class="form-control"
                   name="title"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-schedule-link">Link</label>
+                <input
+                  type="text"
+                  id="form-edit-schedule-link"
+                  class="form-control"
+                  name="Link"
                 />
               </div>
             </form>
