--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -296,10 +296,21 @@
           <div class="modal-body">
             <form>
               <div class="form-group">
+                <p> URL </p>
                 <textarea
                   id="modal-get-settings-as-url-url"
                   class="form-control"
-                  rows="10"
+                  rows="6"
+                  readonly
+                >
+                </textarea>
+              </div>
+              <div class="form-group">
+                <p>With Range</p>
+                <textarea
+                  id="modal-get-settings-as-url-url-withrange"
+                  class="form-control"
+                  rows="6"
                   readonly
                 >
                 </textarea>
