--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -241,6 +241,16 @@
               </div>
 
               <div class="form-group">
+                <label for="form-edit-schedule-progress">Progress</label>
+                <input
+                  type="text"
+                  id="form-edit-schedule-progress"
+                  class="form-control"
+                  name="progress"
+                />
+              </div>
+
+              <div class="form-group">
                 <label for="form-edit-schedule-link">Link</label>
                 <input
                   type="text"
