--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -39,7 +39,13 @@
           Get Settings As URL
         </button>
       </nav>
-      <div id="vistl-container"></div>
+      <div id="vistl-container">
+        <div id="spinner-wrapper"class="d-flex justify-content-center">
+          <div class="spinner-border text-secondary" style="margin-top: 100px; width: 120px; height: 120px;" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Add Schedule Modal -->
