--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -35,6 +35,10 @@
           Edit Schedule
         </button>
         <span class="mybtn-separator"> | </span>
+        <button id="mybtn-filter" class="mybtn">
+          Filter
+        </button>
+        <span class="mybtn-separator"> | </span>
         <button id="mybtn-get-settings-as-url" class="mybtn">
           Get Settings As URL
         </button>
@@ -286,6 +290,95 @@
         </div>
       </div>
     </div>
+
+
+    <!-- Filter -->
+    <div
+      class="modal fade"
+      id="modal-filter"
+      data-backdrop="static"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Filter</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <h5> Project </h5>
+              <div class="form-group">
+                <label for="form-filter-project-name">Name</label>
+                <input
+                  type="text"
+                  id="form-filter-project-name"
+                  class="form-control"
+                />
+              </div>
+              <div class="form-group">
+                <label for="form-filter-project-assignee">Assignee</label>
+                <input
+                  type="text"
+                  id="form-filter-project-assignee"
+                  class="form-control"
+                />
+              </div>
+              <h5> Schedule </h5>
+              <div class="form-group">
+                <label for="form-filter-schedule-name">Name</label>
+                <input
+                  type="text"
+                  id="form-filter-schedule-name"
+                  class="form-control"
+                />
+              </div>
+              <div class="form-group">
+                <label for="form-filter-schedule-assignee">Assignee</label>
+                <input
+                  type="text"
+                  id="form-filter-schedule-assignee"
+                  class="form-control"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              id="form-filter-clear"
+              type="button"
+              class="btn btn-warning"
+            >
+              Clear
+            </button>
+            <button
+              id="form-filter-apply"
+              type="button"
+              class="btn btn-primary"
+            >
+              Apply
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- Settings URL Modal -->
     <div
