--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -111,6 +111,15 @@
               </div>
 
               <div class="form-group">
+                <label for="form-add-schedule-description">Description</label>
+                <textarea
+                  id="form-add-schedule-description"
+                  class="form-control"
+                  >
+                </textarea>
+              </div>
+
+              <div class="form-group">
                 <label for="form-add-schedule-assignee">Assignee</label>
                 <input
                   type="text"
@@ -238,6 +247,15 @@
                   class="form-control"
                   name="title"
                 />
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-schedule-description">Description</label>
+                <textarea
+                  id="form-edit-schedule-description"
+                  class="form-control"
+                >
+                </textarea>
               </div>
 
               <div class="form-group">
