--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -115,8 +115,7 @@
                 <textarea
                   id="form-add-schedule-description"
                   class="form-control"
-                  >
-                </textarea>
+                  ></textarea>
               </div>
 
               <div class="form-group">
@@ -254,8 +253,7 @@
                 <textarea
                   id="form-edit-schedule-description"
                   class="form-control"
-                >
-                </textarea>
+                ></textarea>
               </div>
 
               <div class="form-group">
