--- a/src/_css.html
+++ b/src/_css.html
@@ -107,6 +107,13 @@
   .vis-panel,
   .vis-label {
     border: none !important;
+    user-select: all !important;
+  }
+
+  .vis-label p,
+  .vis-label a
+  {
+    user-select: text !important;
   }
 
   /* group の パネルの border */
