--- a/src/_css.html
+++ b/src/_css.html
@@ -155,7 +155,9 @@
   .vis-background .vis-item-content {
     top: 0px;
     font-size: 10px;
-    color: gray;
+    color: white;
+    padding: 0 10px !important;
+    font-weight: 700;
   }
 
   /* 一番使う range の style */
