--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -36,6 +36,14 @@
         </button>
         -->
         <span class="mybtn-separator"> | </span>
+        <button id="mybtn-add-project" class="mybtn">
+          Add Project
+        </button>
+        <span class="mybtn-separator"> | </span>
+        <button id="mybtn-edit-project" class="mybtn">
+          Edit Project
+        </button>
+        <span class="mybtn-separator"> | </span>
         <button id="mybtn-add-schedule" class="mybtn">
           Add Schedule
         </button>
@@ -330,6 +338,179 @@
             </button>
             <button
               id="form-edit-schedule-button-update"
+              type="button"
+              class="btn btn-primary"
+            >
+              Update
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Add project Modal -->
+    <div
+      class="modal fade"
+      id="modal-add-project"
+      data-backdrop="static"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add Project</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="form-add-project">
+              <div class="form-group">
+                <label for="form-add-project-projectgroup">ProjectGroup</label>
+                <br />
+                <select
+                  id="form-add-project-projectgroup"
+                  class="form-control"
+                  name="projectGroup"
+                >
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="form-add-project-name">Name</label>
+                <input
+                  type="text"
+                  id="form-add-project-name"
+                  class="form-control"
+                  name="name"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-add-project-assignee">Assignee</label>
+                <input
+                  type="text"
+                  id="form-add-project-assignee"
+                  class="form-control"
+                  name="assignee"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-add-project-link">Color</label>
+                <input
+                  type="text"
+                  id="form-add-project-color"
+                  class="form-control"
+                  name="color"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              id="form-add-project-button-add"
+              type="button"
+              class="btn btn-primary"
+            >
+              Add
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Edit project Modal -->
+    <div
+      class="modal fade"
+      id="modal-edit-project"
+      data-backdrop="static"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Edit Project</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="form-edit-project">
+              <div class="form-group">
+                <label for="form-edit-project-name">Name</label>
+                <input
+                  type="text"
+                  id="form-edit-project-name"
+                  class="form-control"
+                  name="name"
+                  readonly
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-project-projectgroup">ProjectGroup</label>
+                <br />
+                <select
+                  id="form-edit-project-projectgroup"
+                  class="form-control"
+                  name="projectgroup"
+                >
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-project-assignee">Assignee</label>
+                <input
+                  type="text"
+                  id="form-edit-project-assignee"
+                  class="form-control"
+                  name="title"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="form-edit-project-color">Color</label>
+                <input
+                  type="text"
+                  id="form-edit-project-color"
+                  class="form-control"
+                  name="color"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              id="form-edit-project-button-update"
               type="button"
               class="btn btn-primary"
             >
