軽微な修正

--- a/src/_project_timeline.html
+++ b/src/_project_timeline.html
@@ -275,7 +275,7 @@
               </div>
 
               <div class="form-group">
-                <label for="form-edit-schedule-istask">isTask</label>
+                <label for="form-edit-schedule-istask">Task</label>
                 <br />
                 <input
                   id="form-edit-schedule-istask"
